--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLASHCARDS</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="icon" href="3122425.ico">
 </head>
 <body>
     <div class="titre">
@@ -13,7 +13,6 @@
         <h2>Aziz Belhadj Sayar</h2>
         <h2>Nouha Bennsar</h2>
     </div>
-    
     <img src="Animated-Flag-Tunisia.gif">
     <div class="flip-card">
         <div class="flip-card-inner" onmouseover="flip(this)" onmouseout="unflip(this)">
@@ -205,7 +204,7 @@
             </div>
         </div>
     </div>
-    <img src="sentenced-judge.gif">
+    <img id="img2" src="sentenced-judge.gif">
     <script src="script.js"></script>
 </body>
 </html>
